--- a/.azurepipelines/.templates/packer-cicd-template.yml
+++ b/.azurepipelines/.templates/packer-cicd-template.yml
@@ -52,6 +52,7 @@ steps:
   - pwsh: |
       if ($IsLinux)
       {
+      eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
       brew install packer ; `
       packer validate ${{ parameters.PACKER_PATH }}/${{ parameters.PACKER_FILE_NAME }}  ; packer build ${{ parameters.PACKER_PATH }}/${{ parameters.PACKER_FILE_NAME }} 
       }
