--- a/.azurepipelines/.templates/packer-cicd-template.yml
+++ b/.azurepipelines/.templates/packer-cicd-template.yml
@@ -52,12 +52,15 @@ steps:
   - pwsh: |
       if ($IsLinux)
       {
-      eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+      $brewShellEnv = & /home/linuxbrew/.linuxbrew/bin/brew shellenv
+      Invoke-Expression $brewShellEnv
       brew install packer ; `
       packer validate ${{ parameters.PACKER_PATH }}/${{ parameters.PACKER_FILE_NAME }}  ; packer build ${{ parameters.PACKER_PATH }}/${{ parameters.PACKER_FILE_NAME }} 
       }
       elseif ($IsMacOS)
       {
+      $brewShellEnv = & /home/linuxbrew/.linuxbrew/bin/brew shellenv
+      Invoke-Expression $brewShellEnv
       brew install packer ; `
       packer validate ${{ parameters.PACKER_PATH }}/${{ parameters.PACKER_FILE_NAME }}  ; packer build ${{ parameters.PACKER_PATH }}/${{ parameters.PACKER_FILE_NAME }} 
       }
