--- a/.azurepipelines/.templates/packer-cicd-template.yml
+++ b/.azurepipelines/.templates/packer-cicd-template.yml
@@ -64,7 +64,7 @@ steps:
           $OutboundIp = (Invoke-RestMethod -Uri "https://checkip.amazonaws.com" -UseBasicParsing).Trim() ; `
           az login --service-principal --username $Env:ARM_CLIENT_ID --password $Env:ARM_CLIENT_SECRET --tenant $Env:ARM_TENANT_ID
           az account set --subscription $Env:ARM_SUBSCRIPTION_ID
-          $nsgId = ${{ parameters.NSG_ID }}
+          $nsgId = "${{ parameters.NSG_ID }}"
 
           $subscriptionId = (Split-Path -Path $nsgId -Parent).Split('/')[2]
           $resourceGroupName = (Split-Path -Path $nsgId -Parent).Split('/')[4]
@@ -133,7 +133,7 @@ steps:
       - pwsh: |
           az login --service-principal --username $Env:ARM_CLIENT_ID --password $Env:ARM_CLIENT_SECRET --tenant $Env:ARM_TENANT_ID
           az account set --subscription $Env:ARM_SUBSCRIPTION_ID
-          $nsgId = ${{ parameters.NSG_ID }}
+          $nsgId = "${{ parameters.NSG_ID }}"
           $subscriptionId = (Split-Path -Path $nsgId -Parent).Split('/')[2]
           $resourceGroupName = (Split-Path -Path $nsgId -Parent).Split('/')[4]
           $nsgName = Split-Path -Path $nsgId -Leaf ; `
